0.10_dev
-revise generate_colormap method.
-revise clipboard functionality.

0.10    2024-12-19
-initial release
